--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: "http://pwang347.github.io/" # the base hostname & protocol for your site
 # Replace the word 'example' with your username if you want to include the icon in the left sidebar
 # Delete the word 'example' if you don't want to include the icon in the left sidebar
 
-resume_name: resume-for-web.pdf  
+resume_name: resume-for-coop.pdf  
 github_username:      pwang347
 linkedin_username:    
 google_plus_username: 
