update resume, some todos completed

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: "http://pwang347.github.io/" # the base hostname & protocol for your site
 # Replace the word 'example' with your username if you want to include the icon in the left sidebar
 # Delete the word 'example' if you don't want to include the icon in the left sidebar
 
-resume_name:          resume-for-coop.pdf  
+resume_name:          paul-wang-resume-last-stable.pdf
 github_username:      pwang347
 linkedin_username:    paul-wang-189567ab
 google_plus_username: 
